FAGSYSTEM-252175 bedre håndtering av perioder før fødsel i fødselsjus… (#5064)
FAGSYSTEM-252175 bedre håndtering av perioder før fødsel i fødselsjustering